# ReMod-Core

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  appveyor.yml  cmake-vs2017.bat
include/: remod.h
include/remod/: base_patch_manager.h  calling_convention.h  calling_convention_type.h  captures.h  common.h  detour_point.h  function_signature.h  global_data.h  global_data_pointer.h  global_function_pointer.h  global_pointer.h  global_string.h  module.h  original_function_call.h  patch_engine.h  patch_manager.h  patch_store.h  platform_detection.h  registers.h  remod_definitions.h  remod_definitions_win32.h  remod_functions.h  remod_win32.h  resolve_strategy.h  return_value_source.h  trackable_function_patch.h  trackable_memory_patch.h  trackable_patch.h  trackable_wrapper.h
include/remod/details/: asm_code_generator.h  calling_convention_type_helper.h  function_traits.h  global_pointer_base.h  global_pointer_registery.h  patch_store.h  set_unique_ptr.h  trackable_function_patch_base.h  trackable_memory_patch_base.h
include/remod/win32/: patch_engine_win32.h  resolve_strategy_win32.h
src/: CMakeLists.txt
src/remod/: base_patch_manager.cpp  captures.cpp  remod_functions.cpp  resolve_strategy.cpp  trackable_memory_patch.cpp  trackable_patch.cpp
src/remod/details/: asm_code_generator_impl.h  asm_code_generator_x64.cpp  asm_code_generator_x64.h  asm_code_generator_x86.cpp  asm_code_generator_x86.h  asm_code_helper.h  base_asm_code_generator.cpp  base_asm_code_generator.h  calling_convention_information.h  global_pointer_base.cpp  global_pointer_registery.cpp  overloaded.h  patch_store.cpp  trackable_function_patch_base.cpp  trackable_memory_patch_base.cpp
src/remod/win32/: patch_engine_win32.cpp  resolve_strategy_win32.cpp
test/: CMakeLists.txt  main.cpp  remod_test_utils.cpp  remod_test_utils.h  test_global_data.cpp  test_global_data_pointer.cpp  test_global_function.cpp  test_global_string.cpp  test_memory_modification.cpp  test_trackable_memory_patch.cpp  test_trackable_patch.cpp
